[CSS Env Vars] Set default env() vars

At the moment we only set the safe-area-inset-* variables
on Android which is causing some bugs on sites.

This CL sets a default value of 0px for all the variables.

BUG=860604

Change-Id: I204378cfeabe95cb531776b6e7bb78b601526b89
Reviewed-on: https://chromium-review.googlesource.com/1128050
Commit-Queue: Emil A Eklund <eae@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573182}
Former-commit-id: 817ca3d4d1ddf5e8571bb79eccf8d73f6efa65c3